add call to action button

--- a/index.html
+++ b/index.html
@@ -56,7 +56,14 @@
           Hello, I'm <span class="hero__text highlight">Junypyr</span>.
         </p>
         <p class="hero__text">I'm a front end web developer.</p>
-        <button class="hero__cta">dog</button>
+        <button class="hero__cta flex row">
+          View my work
+          <img
+            class="hero__cta__icon"
+            src="./Public//image/down-arrow-svgrepo-com.svg"
+            alt=""
+          />
+        </button>
       </div>
     </section>
 
