--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Junypyr Nealy | Web Developer</title>
   </head>
+
   <body>
-    <header class="header flex row">
-      <nav class="navbar container">
-        <ul class="navabr__list flex row section--text">
+    <header class="header flex">
+      <nav class="navbar header__container">
+        <ul class="navabr__list flex row navbar--text">
           <li class="navbar__list--item">
             <a class="navbar__list--item--link" href="#hero">Home</a>
           </li>
@@ -50,122 +51,144 @@
       </nav>
     </header>
 
-    <section class="hero section flex" id="hero">
+    <section class="hero--section flex" id="hero">
       <div class="container flex row">
         <p class="hero__text">
           Hello, I'm <span class="hero__text highlight">Junypyr</span>.
         </p>
         <p class="hero__text">I'm a front end web developer.</p>
-        <button class="hero__cta flex row">
-          View my work
-          <img
-            class="hero__cta__icon"
-            src="./Public//image/down-arrow-svgrepo-com.svg"
-            alt=""
-          />
-        </button>
+
+        <a href="#about" class="hero__cta flex row">
+          <p class="cta__text">
+            View my work
+            <img
+              class="hero__cta__icon"
+              src="./Public//image/down-arrow-svgrepo-com.svg"
+              alt=""
+            />
+          </p>
+        </a>
       </div>
     </section>
 
-    <section class="section" id="about">
-      <div class="container flex row">
-        <h2 class="section--title">About</h2>
-        <img
-          class="about__image"
-          src="./Public/image/profile-svgrepo-com.svg"
-          alt=""
-        />
-        <p class="section--text">
-          I'm a web developer commited to the philosophy of life-long learning,
-          with a deep passion for JavaScript, CSS, and all things related to
-          front end development. I find web developments unique need for
-          creativity, logic, and no shortage of new technologies to learn drives
-          my passion for the web and web devolopment. When I'm not at my
-          computer I like to spend my time reading, writing, and playing
-          table-top games.
-        </p>
-      </div>
-
-      <div class="container technologies flex">
-        <div class="technologies__item flex row">
-          <img src="./Public/image/icons8-html5.svg" alt="HTML 5 Logo" />
-          <p class="technologies__item--text">HTML</p>
+    <section class="section container flex row" id="about">
+      <h2 class="section--title section--title--navbar flex">About</h2>
+      <div class="split-divs">
+        <div class="container flex row split">
+          <img
+            class="about__image"
+            src="./Public/image/profile-svgrepo-com.svg"
+            alt=""
+          />
+          <p class="section--text">
+            I'm a web developer commited to the philosophy of life-long
+            learning, with a deep passion for JavaScript, CSS, and all things
+            related to front end development. I find web developments unique
+            need for creativity, logic, and no shortage of new technologies to
+            learn drives my passion for the web and web devolopment. When I'm
+            not at my computer I like to spend my time reading, writing, and
+            playing table-top games.
+          </p>
         </div>
 
-        <div class="technologies__item flex row">
-          <img
-            class="technologies__item__image"
-            src="./Public/image/icons8-css3.svg"
-            alt="CSS 3 Logo"
-          />
-          <p class="technologies__item--text">CSS</p>
-        </div>
-
-        <div class="technologies__item flex row">
-          <img
-            class="technologies__item__image"
-            src="./Public/image/icons8-javascript.svg"
-            alt="JavaScript Logo"
-          />
-          <p class="technologies__item--text">JavaScript</p>
-        </div>
-
-        <div class="technologies__item flex row">
-          <img
-            class="technologies__item__image"
-            src="./Public/image/icons8-react.svg"
-            alt="React Logo"
-          />
-          <p class="technologies__item--text">React</p>
-        </div>
-
-        <div class="technologies__item flex row">
-          <img
-            class="technologies__item__image"
-            src="./Public/image/icons8-nodejs.svg"
-            alt="Node.js Logo"
-          />
-          <p class="technologies__item--text">Node.js</p>
-        </div>
-
-        <div class="technologies__item flex row">
-          <img
-            class="technologies__item__image"
-            src="./Public/image/express.1eca086d2a78b4be3dd1f0a47b84b618 (Small).png"
-            alt="Express Logo"
-          />
-          <p class="technologies__item--text">Express</p>
-        </div>
-
-        <div class="technologies__item flex row">
-          <img
-            class="technologies__item__image"
-            src="./Public/image/icons8-mongodb-a-cross-platform-document-oriented-database-program-24.png"
-            alt="MongoDB Logo"
-          />
-          <p class="technologies__item--text">MongoDB</p>
-        </div>
-
-        <div class="technologies__item flex row">
-          <img
-            class="technologies__item__image"
-            src="./Public/image/icons8-bootstrap-logo.svg"
-            alt="Bootstrap Logo"
-          />
-          <p class="technologies__item--text">Bootstrap</p>
+        <div class="container technologies flex split">
+          <div class="technologies__row">
+            <div class="technologies__item flex row">
+              <img
+                class="technologies__item__image"
+                src="./Public/image/icons8-html5.svg"
+                alt="HTML 5 Logo"
+              />
+              <p class="technologies__item--text">HTML</p>
+            </div>
+            <div class="technologies__item flex row">
+              <img
+                class="technologies__item__image"
+                src="./Public/image/icons8-css3.svg"
+                alt="CSS 3 Logo"
+              />
+              <p class="technologies__item--text">CSS</p>
+            </div>
+            <div class="technologies__item flex row">
+              <img
+                class="technologies__item__image"
+                src="./Public/image/icons8-javascript.svg"
+                alt="JavaScript Logo"
+              />
+              <p class="technologies__item--text">JAVASCRIPT</p>
+            </div>
+          </div>
+          <div class="technologies__row">
+            <div class="technologies__item flex row">
+              <img
+                class="technologies__item__image"
+                src="./Public/image/icons8-react.svg"
+                alt="React Logo"
+              />
+              <p class="technologies__item--text">REACT</p>
+            </div>
+            <div class="technologies__item flex row">
+              <img
+                class="technologies__item__image"
+                src="./Public/image/icons8-nodejs.svg"
+                alt="Node.js Logo"
+              />
+              <p class="technologies__item--text">NODE.JS</p>
+            </div>
+            <div class="technologies__item flex row">
+              <img
+                class="technologies__item__image"
+                src="./Public/image/express.1eca086d2a78b4be3dd1f0a47b84b618 (Small).png"
+                alt="Express Logo"
+              />
+              <p class="technologies__item--text">EXPRESS.JS</p>
+            </div>
+            <div class="technologies__item flex row">
+              <img
+                class="technologies__item__image"
+                src="./Public/image/icons8-mongodb-a-cross-platform-document-oriented-database-program-24.png"
+                alt="MongoDB Logo"
+              />
+              <p class="technologies__item--text">MONGODB</p>
+            </div>
+          </div>
+          <div class="technologies__row">
+            <div class="technologies__item flex row">
+              <img
+                class="technologies__item__image"
+                src="./Public/image/icons8-bootstrap-logo.svg"
+                alt="Bootstrap Logo"
+              />
+              <p class="technologies__item--text">BOOTSTRAP</p>
+            </div>
+            <div class="technologies__item flex row">
+              <img
+                class="technologies__item__image"
+                src="./Public/image/Git-Icon-1788C.svg"
+                alt="Bootstrap Logo"
+              />
+              <p class="technologies__item--text">GIT</p>
+            </div>
+            <div class="technologies__item flex row">
+              <img
+                class="technologies__item__image"
+                src="./Public/image/icon-1023108412.png"
+                alt="Bootstrap Logo"
+              />
+              <p class="technologies__item--text">HTMX</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
     <section class="section" id="contact">
       <div class="container flex row">
-        <h2 class="section--title">Contact</h2>
-        <img src="" alt="" />
+        <h2 class="section--title section--title--navbar">Contact</h2>
         <p class="section--text">
           Have a question or want to work together? Leave your details and I'll
           get back to you as soon as possible.
         </p>
-
         <form class="contact" action="">
           <input
             class="form__input"
@@ -192,15 +215,26 @@
         </form>
       </div>
     </section>
-    <footer class="footer">
+
+    <footer class="footer flex">
       <div class="container flex row">
-        <a href="">
-          <img src="./Public/image/icons8-github-30.png" alt="" />
-        </a>
-        <a href="">
-          <img src="./Public/image/icons8-email-50.png" alt="" />
-        </a>
-        <p>Junypyr Nealy ©2023</p>
+        <div class="footer__links">
+          <a href="">
+            <img
+              class="footer__image"
+              src="./Public/image/icons8-github-30.png"
+              alt=""
+            />
+          </a>
+          <a href="">
+            <img
+              class="footer__image"
+              src="./Public/image/icons8-email-50.png"
+              alt=""
+            />
+          </a>
+        </div>
+        <p class="footer__text">Junypyr Nealy ©2023</p>
       </div>
     </footer>
   </body>
