Insert Media Queries and Responsive Styling

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
 
     <section class="section container flex row" id="about">
-      <h2 class="section--title section--title--navbar flex">About</h2>
+      <h2 class="section--title flex">About</h2>
       <div class="split-divs">
         <div class="container flex row split">
           <img
@@ -146,7 +146,7 @@
             <div class="technologies__item flex row">
               <img
                 class="technologies__item__image"
-                src="./Public/image/icons8-mongodb-a-cross-platform-document-oriented-database-program-24.png"
+                src="./Public/image/MONGOSQUARE.png"
                 alt="MongoDB Logo"
               />
               <p class="technologies__item--text">MONGODB</p>
@@ -182,9 +182,9 @@
       </div>
     </section>
 
-    <section class="section" id="contact">
+    <section class="section container" id="contact">
       <div class="container flex row">
-        <h2 class="section--title section--title--navbar">Contact</h2>
+        <h2 class="section--title">Contact</h2>
         <p class="section--text">
           Have a question or want to work together? Leave your details and I'll
           get back to you as soon as possible.
@@ -208,7 +208,6 @@
             class="form__input"
             name="message"
             id="message"
-            cols="30"
             rows="10"
             placeholder="Message"
           ></textarea>
@@ -222,15 +221,15 @@
           <a href="">
             <img
               class="footer__image"
-              src="./Public/image/icons8-github-30.png"
-              alt=""
+              src="./Public/image/github-mark-white.png"
+              alt="github"
             />
           </a>
           <a href="">
             <img
               class="footer__image"
-              src="./Public/image/icons8-email-50.png"
-              alt=""
+              src="./Public/image/email-light.png"
+              alt="Email"
             />
           </a>
         </div>
