add hero background animation

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       </nav>
     </header>
 
+    <canvas id="canvas1"></canvas>
     <section class="hero--section flex" id="hero">
       <div class="container flex row">
         <p class="hero__text">
@@ -237,4 +238,5 @@
       </div>
     </footer>
   </body>
+  <script src="./particles.js"></script>
 </html>
