Accessibility pass and large/small screen styling

--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
         <a href="#about" class="hero__cta flex row">
           <p class="cta__text">
             View my work
-            <img
-              class="hero__cta__icon"
-              src="./Public//image/down-arrow-svgrepo-com.svg"
-              alt=""
-            />
+            <i class="fa-solid fa-arrow-down"></i>
           </p>
         </a>
       </div>
@@ -182,14 +178,31 @@
         </div>
       </div>
     </section>
+    <section class="container flex row" id="projects">
+      <h2 class="section--title">Projects</h2>
+      <div class="project-card container">
+        <img src="" alt="" />
+        <h3>Project Title</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, unde.
+          Porro nesciunt tenetur voluptatum aut eius vitae voluptates minima ex,
+          iusto, neque tempora, id consequuntur!
+        </p>
+      </div>
+    </section>
 
     <section class="section container" id="contact">
       <div class="container flex row">
         <h2 class="section--title">Contact</h2>
+
         <p class="section--text">
           Have a question or want to work together? Leave your details and I'll
           get back to you as soon as possible.
         </p>
+        <a href="mailto:junypyr+dev@gmail.com"
+          >Have a question or want to work together? Leave your details and I'll
+          get back to you as soon as possible.</a
+        >
         <form class="contact" action="">
           <input
             class="form__input"
@@ -239,4 +252,8 @@
     </footer>
   </body>
   <script src="./particles.js"></script>
+  <script
+    src="https://kit.fontawesome.com/315513bdae.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
