Fix Footer Styling

--- a/index.html
+++ b/index.html
@@ -195,15 +195,17 @@
       <div class="container flex row">
         <h2 class="section--title">Contact</h2>
 
-        <p class="section--text">
+        <p class="contact--text">
           Have a question or want to work together? Leave your details and I'll
           get back to you as soon as possible.
         </p>
-        <a href="mailto:junypyr+dev@gmail.com"
-          >Have a question or want to work together? Leave your details and I'll
-          get back to you as soon as possible.</a
-        >
-        <form class="contact" action="">
+        <a href="mailto:junypyr@gmail.com" class="contact__cta flex row">
+          <p class="cta__text">
+            Send me an Email
+            <i class="fa-solid fa-envelope ml-1"></i>
+          </p>
+        </a>
+        <!-- <form class="contact" action="">
           <input
             class="form__input"
             type="text"
@@ -225,21 +227,21 @@
             rows="10"
             placeholder="Message"
           ></textarea>
-        </form>
+        </form> -->
       </div>
     </section>
 
     <footer class="footer flex">
       <div class="container flex row">
         <div class="footer__links">
-          <a href="">
+          <a class="footer__link" href="https://github.com/JunNealy">
             <img
               class="footer__image"
               src="./Public/image/github-mark-white.png"
               alt="github"
             />
           </a>
-          <a href="">
+          <a class="footer__link" href="mailto:junypyr@gmail.com">
             <img
               class="footer__image"
               src="./Public/image/email-light.png"
