project section added

--- a/index.html
+++ b/index.html
@@ -180,14 +180,23 @@
     </section>
     <section class="container flex row" id="projects">
       <h2 class="section--title">Projects</h2>
-      <div class="project-card container">
-        <img src="" alt="" />
-        <h3>Project Title</h3>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, unde.
-          Porro nesciunt tenetur voluptatum aut eius vitae voluptates minima ex,
-          iusto, neque tempora, id consequuntur!
-        </p>
+      <div class="project-card">
+        <div class="project-card__image-container">
+          <img
+            class="project-card__image"
+            src="./Public/image/fdas.png"
+            alt=""
+          />
+        </div>
+        <div class="project-card__info">
+          <h2 class="project-card__info--title">HooBank</h2>
+          <p class="project-card__info--subtitle">Modern Brochure Website</p>
+          <p class="project-card__info--description">
+            A brochure website created using React, Node.js, and Tailwind CSS."
+          </p>
+          <a class="project-card__info--link" href="">LIVE</a>
+          <a href="" class="project-card__info--link">LEARN MORE</a>
+        </div>
       </div>
     </section>
 
