--- a/index.html
+++ b/index.html
@@ -180,22 +180,21 @@
     </section>
     <section class="container flex row" id="projects">
       <h2 class="section--title">Projects</h2>
-      <div class="project-card">
-        <div class="project-card__image-container">
-          <img
-            class="project-card__image"
-            src="./Public/image/fdas.png"
-            alt=""
-          />
-        </div>
-        <div class="project-card__info">
-          <h2 class="project-card__info--title">HooBank</h2>
-          <p class="project-card__info--subtitle">Modern Brochure Website</p>
-          <p class="project-card__info--description">
-            A brochure website created using React, Node.js, and Tailwind CSS."
-          </p>
-          <a class="project-card__info--link" href="">LIVE</a>
-          <a href="" class="project-card__info--link">LEARN MORE</a>
+      <div class="project-container">
+        <div class="project">
+          <div class="project-image">
+            <img src="./Public//image/Prototypeimg.png" alt="" />
+          </div>
+          <div class="project-text">
+            <p class="project-text__title">Project</p>
+            <p class="project-text__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              deleniti illum modi?
+            </p>
+            <a class="project-text__link" href="">Live App </a>
+
+            <a class="project-text__link" href="">Learn More</a>
+          </div>
         </div>
       </div>
     </section>
@@ -205,7 +204,7 @@
         <h2 class="section--title">Contact</h2>
 
         <p class="contact--text">
-          Have a question or want to work together? Leave your details and I'll
+          Have a question or want to work together? Please reach out and I will
           get back to you as soon as possible.
         </p>
         <a href="mailto:junypyr@gmail.com" class="contact__cta flex row">
