--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
   <body>
     <header class="header flex">
-      <nav class="navbar header__container">
-        <ul class="navabr__list flex row navbar--text">
+      <nav class="navbar">
+        <ul class="navabr__list flex navbar--text">
           <li class="navbar__list--item">
             <a class="navbar__list--item--link" href="#hero">Home</a>
           </li>
@@ -51,7 +51,8 @@
       </nav>
     </header>
 
-    <canvas id="canvas1"></canvas>
+    <canvas id="particles"></canvas>
+
     <section class="hero--section flex" id="hero">
       <div class="container flex row">
         <p class="hero__text">
@@ -178,9 +179,42 @@
         </div>
       </div>
     </section>
+
     <section class="container flex row" id="projects">
       <h2 class="section--title">Projects</h2>
       <div class="project-container">
+        <div class="project">
+          <div class="project-image">
+            <img src="./Public//image/Prototypeimg.png" alt="" />
+          </div>
+          <div class="project-text">
+            <p class="project-text__title">Project</p>
+            <p class="project-text__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              deleniti illum modi?
+            </p>
+            <a class="project-text__link" href="">Live App </a>
+
+            <a class="project-text__link" href="">Learn More</a>
+          </div>
+        </div>
+
+        <div class="project">
+          <div class="project-image">
+            <img src="./Public//image/Prototypeimg.png" alt="" />
+          </div>
+          <div class="project-text">
+            <p class="project-text__title">Project</p>
+            <p class="project-text__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              deleniti illum modi?
+            </p>
+            <a class="project-text__link" href="">Live App </a>
+
+            <a class="project-text__link" href="">Learn More</a>
+          </div>
+        </div>
+
         <div class="project">
           <div class="project-image">
             <img src="./Public//image/Prototypeimg.png" alt="" />
