Project Update Hoo Bank

--- a/index.html
+++ b/index.html
@@ -185,47 +185,20 @@
       <div class="project-container">
         <div class="project">
           <div class="project-image">
-            <img src="./Public//image/Prototypeimg.png" alt="" />
+            <img src="./Public//image/HooBank.png" alt="" />
           </div>
           <div class="project-text">
-            <p class="project-text__title">Project</p>
+            <p class="project-text__title">HooBank</p>
             <p class="project-text__description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-              deleniti illum modi?
+              A sleek brochure website, embodying modern design principles with
+              an intuitive mobile-native experience. Created with React,
+              Node.js, and Tailwind CSS."
             </p>
-            <a class="project-text__link" href="">Live App </a>
-
-            <a class="project-text__link" href="">Learn More</a>
-          </div>
-        </div>
-
-        <div class="project">
-          <div class="project-image">
-            <img src="./Public//image/Prototypeimg.png" alt="" />
-          </div>
-          <div class="project-text">
-            <p class="project-text__title">Project</p>
-            <p class="project-text__description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-              deleniti illum modi?
-            </p>
-            <a class="project-text__link" href="">Live App </a>
-
-            <a class="project-text__link" href="">Learn More</a>
-          </div>
-        </div>
-
-        <div class="project">
-          <div class="project-image">
-            <img src="./Public//image/Prototypeimg.png" alt="" />
-          </div>
-          <div class="project-text">
-            <p class="project-text__title">Project</p>
-            <p class="project-text__description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-              deleniti illum modi?
-            </p>
-            <a class="project-text__link" href="">Live App </a>
+            <a
+              class="project-text__link"
+              href="https://junnealy.github.io/Ubank/"
+              >Live App
+            </a>
 
             <a class="project-text__link" href="">Learn More</a>
           </div>
