--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="technologies__item flex row">
               <img
                 class="technologies__item__image"
-                src="./Public/image/icon-1023108412.png"
+                src="./Public/image/bootstrap.png"
                 alt="Bootstrap Logo"
               />
               <p class="technologies__item--text">HTMX</p>
@@ -195,12 +195,49 @@
               Node.js, and Tailwind CSS."
             </p>
             <a
+              target="_blank"
+              rel="noopener noreferrer"
               class="project-text__link"
               href="https://junnealy.github.io/Ubank/"
               >Live App
             </a>
 
-            <a class="project-text__link" href="">Learn More</a>
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              class="project-text__link"
+              href="https://github.com/JunNealy/Ubank"
+              >Learn More</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="project-container">
+        <div class="project">
+          <div class="project-image">
+            <img src="./Public//image/the-planets.png" alt="" />
+          </div>
+          <div class="project-text">
+            <p class="project-text__title">Our Solar System</p>
+            <p class="project-text__description">
+              Exploreour solar system on this React-powered educational website,
+              diving into captivating details about each planet.
+            </p>
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              class="project-text__link"
+              href="https://junnealy.github.io/the-planets/"
+              >Live App
+            </a>
+
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              class="project-text__link"
+              href="https://github.com/JunNealy/the-planets"
+              >Learn More</a
+            >
           </div>
         </div>
       </div>
@@ -249,7 +286,12 @@
     <footer class="footer flex">
       <div class="container flex row">
         <div class="footer__links">
-          <a class="footer__link" href="https://github.com/JunNealy">
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="footer__link"
+            href="https://github.com/JunNealy"
+          >
             <img
               class="footer__image"
               src="./Public/image/github-mark-white.png"
