--- a/index.html
+++ b/index.html
@@ -180,64 +180,64 @@
       </div>
     </section>
 
-    <section class="container flex row" id="projects">
+    <section class="container flex" id="projects">
       <h2 class="section--title">Projects</h2>
-      <div class="project-container">
-        <div class="project">
-          <div class="project-image">
-            <img src="./Public//image/HooBank.png" alt="" />
-          </div>
-          <div class="project-text">
-            <p class="project-text__title">HooBank</p>
-            <p class="project-text__description">
-              A sleek brochure website, embodying modern design principles with
-              an intuitive mobile-native experience. Created with React,
-              Node.js, and Tailwind CSS."
-            </p>
-            <a
-              target="_blank"
-              rel="noopener noreferrer"
-              class="project-text__link"
-              href="https://junnealy.github.io/Ubank/"
-              >Live App
-            </a>
-
-            <a
-              target="_blank"
-              rel="noopener noreferrer"
-              class="project-text__link"
-              href="https://github.com/JunNealy/Ubank"
-              >Learn More</a
-            >
+      <div class="project-card-container">
+        <div class="project-container">
+          <div class="project">
+            <div class="project-image">
+              <img src="./Public//image/HooBank.png" alt="" />
+            </div>
+            <div class="project-text">
+              <p class="project-text__title">HooBank</p>
+              <p class="project-text__description">
+                A sleek brochure website, embodying modern design principles
+                with an intuitive mobile-native experience. Created with React,
+                Node.js, and Tailwind CSS."
+              </p>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="project-text__link"
+                href="https://junnealy.github.io/Ubank/"
+                >Live App
+              </a>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="project-text__link"
+                href="https://github.com/JunNealy/Ubank"
+                >Learn More</a
+              >
+            </div>
           </div>
         </div>
-      </div>
-      <div class="project-container">
-        <div class="project">
-          <div class="project-image">
-            <img src="./Public//image/the-planets.png" alt="" />
-          </div>
-          <div class="project-text">
-            <p class="project-text__title">Our Solar System</p>
-            <p class="project-text__description">
-              Exploreour solar system on this React-powered educational website,
-              diving into captivating details about each planet.
-            </p>
-            <a
-              target="_blank"
-              rel="noopener noreferrer"
-              class="project-text__link"
-              href="https://junnealy.github.io/the-planets/"
-              >Live App
-            </a>
-
-            <a
-              target="_blank"
-              rel="noopener noreferrer"
-              class="project-text__link"
-              href="https://github.com/JunNealy/the-planets"
-              >Learn More</a
-            >
+        <div class="project-container">
+          <div class="project">
+            <div class="project-image">
+              <img src="./Public//image/the-planets.png" alt="" />
+            </div>
+            <div class="project-text">
+              <p class="project-text__title">Our Solar System</p>
+              <p class="project-text__description">
+                Exploreour solar system on this React-powered educational
+                website, diving into captivating details about each planet.
+              </p>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="project-text__link"
+                href="https://junnealy.github.io/the-planets/"
+                >Live App
+              </a>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="project-text__link"
+                href="https://github.com/JunNealy/the-planets"
+                >Learn More</a
+              >
+            </div>
           </div>
         </div>
       </div>
@@ -257,29 +257,6 @@
             <i class="fa-solid fa-envelope ml-1"></i>
           </p>
         </a>
-        <!-- <form class="contact" action="">
-          <input
-            class="form__input"
-            type="text"
-            name="name"
-            id="name"
-            placeholder="Name"
-          />
-          <input
-            class="form__input"
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Email"
-          />
-          <textarea
-            class="form__input"
-            name="message"
-            id="message"
-            rows="10"
-            placeholder="Message"
-          ></textarea>
-        </form> -->
       </div>
     </section>
 
