header / nav styling

--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
   </head>
 
   <body>
+    <header class="header">
+      <nav class="nav flex">
+        <ul class="nav__list flex">
+          <li class="nav__item"><a class="nav__link" href="#hero">Home</a></li>
+          <li class="nav__item">
+            <a class="nav__link" href="#about">About</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#projects">Projects</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- 
     <header class="header flex">
       <nav class="navbar">
         <ul class="navabr__list flex navbar--text">
@@ -49,7 +66,16 @@
           </li>
         </ul>
       </nav>
-    </header>
+    </header> -->
+  </body>
+  <script src="./particles.js"></script>
+  <script
+    src="https://kit.fontawesome.com/315513bdae.js"
+    crossorigin="anonymous"
+  ></script>
+</html>
+
+<!--
 
     <canvas id="particles"></canvas>
 
@@ -285,11 +311,4 @@
         </div>
         <p class="footer__text">Junypyr Nealy ©2023</p>
       </div>
-    </footer>
-  </body>
-  <script src="./particles.js"></script>
-  <script
-    src="https://kit.fontawesome.com/315513bdae.js"
-    crossorigin="anonymous"
-  ></script>
-</html>
+    </footer> -->
