--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header flex">
       <nav class="nav flex">
         <ul class="nav__list flex">
           <li class="nav__item"><a class="nav__link" href="#hero">Home</a></li>
