--- a/index.html
+++ b/index.html
@@ -48,25 +48,18 @@
         </ul>
       </nav>
     </header>
-    <!-- 
-    <header class="header flex">
-      <nav class="navbar">
-        <ul class="navabr__list flex navbar--text">
-          <li class="navbar__list--item">
-            <a class="navbar__list--item--link" href="#hero">Home</a>
-          </li>
-          <li class="navbar__list--item">
-            <a class="navbar__list--item--link" href="#about">About</a>
-          </li>
-          <li class="navbar__list--item">
-            <a class="navbar__list--item--link" href="#projects">Projects</a>
-          </li>
-          <li class="navbar__list--item">
-            <a class="navbar__list--item--link" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header> -->
+    <canvas id="particles"></canvas>
+    <main>
+      <section id="hero" class="section__container">
+        <p class="hero-typography">
+          Hello, I'm <span class="hero-text highlight">Junypyr</span>.
+        </p>
+        <p class="hero-typography">I'm a front end web developer.</p>
+        <a href="#about" class="hero__cta"
+          >View my work <i class="fa-solid fa-arrow-down"></i
+        ></a>
+      </section>
+    </main>
   </body>
   <script src="./particles.js"></script>
   <script
@@ -77,7 +70,7 @@
 
 <!--
 
-    <canvas id="particles"></canvas>
+    
 
     <section class="hero--section flex" id="hero">
       <div class="container flex row">
