--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       href="./public/favicon/favicon-16x16.png?"
     />
     <link rel="manifest" href="public/favicon/site.webmanifest" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="./Public/favicon/favicon.ico"
+    />
     <link rel="stylesheet" href="./styles.css" />
     <title>Junypyr Nealy | Web Developer</title>
   </head>
@@ -165,6 +170,9 @@
             </div>
           </div>
         </div>
+      </section>
+      <section id="projects">
+        <h2 class="section__title">Projects</h2>
       </section>
     </main>
   </body>
