--- a/index.html
+++ b/index.html
@@ -171,8 +171,36 @@
           </div>
         </div>
       </section>
-      <section id="projects">
+      <section id="projects" class="section__container">
         <h2 class="section__title">Projects</h2>
+        <div class="card__container">
+          <div class="project__card">
+            <div class="project__card__background">
+              <div class="project__card__content">
+                <p class="project__card__title">Hoobank</p>
+                <p class="project__card__text">
+                  A sleek brochure website, embodying modern design principles
+                  with an intuitive mobile-native experience. Created with
+                  React, Node.js, and Tailwind CSS.
+                </p>
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="project-text__link"
+                  href="https://junnealy.github.io/Ubank/"
+                  >Live App
+                </a>
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="project-text__link"
+                  href="https://github.com/JunNealy/Ubank"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
