--- a/index.html
+++ b/index.html
@@ -205,7 +205,45 @@
           </div>
         </div>
       </section>
+
+      <section id="contact" class="section__container">
+        <h2 class="section__title">Contact</h2>
+        <p class="contact__text">
+          Have a question or want to work together? Please reach out and I will
+          get back to you as soon as possible.
+        </p>
+        <a href="mailto:junypyr@gmail.com" class="hero__cta">
+          <p class="cta__text">
+            Send me an Email
+            <i class="fa-solid fa-envelope ml-1"></i>
+          </p>
+        </a>
+      </section>
     </main>
+    <footer id="footer">
+      <div class="footer__links">
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          class="footer__link"
+          href="https://github.com/JunNealy"
+        >
+          <img
+            class="footer__image"
+            src="./Public/image/github-mark-white.png"
+            alt="github"
+          />
+        </a>
+        <a class="footer__link" href="mailto:junypyr@gmail.com">
+          <img
+            class="footer__image"
+            src="./Public/image/email-light.png"
+            alt="Email"
+          />
+        </a>
+      </div>
+      <p>Junypyr Nealy ©2023</p>
+    </footer>
   </body>
   <script src="./particles.js"></script>
   <script
