--- a/index.html
+++ b/index.html
@@ -244,7 +244,12 @@
           />
         </a>
       </div>
-      <p>Junypyr Nealy ©2023</p>
+      <p>
+        Junypyr Nealy
+        <script>
+          document.write(/\d{4}/.exec(Date())[0]);
+        </script>
+      </p>
     </footer>
   </body>
   <script src="./particles.js"></script>
