Styling and new links

--- a/index.html
+++ b/index.html
@@ -205,6 +205,65 @@
               >
             </div>
           </div>
+          <div class="project__card">
+            <img
+              class="project__image"
+              src="./Public/image/the-planets.png"
+              alt=""
+            />
+            <div class="project__text">
+              <p class="project__title">The Planets</p>
+              <p class="project__description">
+                Explore out solar system on this React-powered educational
+                website, diving into captivating details about each planet.
+                Complete with helpful reference images and direct links to
+                sources.
+              </p>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="project__cta"
+                href="https://junnealy.github.io/the-planets/"
+                >Live App
+              </a>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="project__cta"
+                href="https://github.com/JunNealy/the-planets"
+                >Learn More</a
+              >
+            </div>
+          </div>
+          <div class="project__card">
+            <img
+              class="project__image"
+              src="./Public//image/password-generator.png"
+              alt=""
+            />
+            <div class="project__text">
+              <p class="project__title">Password Generator</p>
+              <p class="project__description">
+                A password generator equipped with customizable parameters that
+                provides feedback on the potential security levels of the
+                generated passwords.
+              </p>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="project__cta"
+                href="https://junnealy.github.io/password-generator/"
+                >Live App
+              </a>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                class="project__cta"
+                href="https://github.com/JunNealy/password-generator"
+                >Learn More</a
+              >
+            </div>
+          </div>
         </div>
       </section>
 
@@ -313,8 +372,7 @@
             <div class="project-text">
               <p class="project-text__title">Our Solar System</p>
               <p class="project-text__description">
-                Exploreour solar system on this React-powered educational
-                website, diving into captivating details about each planet.
+            
               </p>
               <a
                 target="_blank"
