--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="project__text">
               <p class="project__title">The Planets</p>
               <p class="project__description">
-                Explore out solar system on this React-powered educational
+                Explore our solar system on this React-powered educational
                 website, diving into captivating details about each planet.
                 Complete with helpful reference images and direct links to
                 sources.
